objects/ssot__Offer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CouponId__c</fullName>
        <label>Coupon</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceName__c</fullName>
        <label>Data Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Offer Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OfferCodeText__c</fullName>
        <label>Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OfferConfigurationText__c</fullName>
        <label>Offer Configuration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Offer_CampaignId_map_Campaign_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer_CampaignId_map_Campaign_Id_N_1</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>Offer_CampaignId_map_Campaign_Id_N_1</relationshipLabel>
        <relationshipName>Offer_CampaignId_map_Campaign_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Offer_CouponId_map_Coupon_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer_CouponId_map_Coupon_Id_N_1</label>
        <referenceTo>ssot__Coupon__dlm</referenceTo>
        <relationshipLabel>Offer_CouponId_map_Coupon_Id_N_1</relationshipLabel>
        <relationshipName>Offer_CouponId_map_Coupon_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__Offer_PromotionId_map_Promotion_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer_PromotionId_map_Promotion_Id_N_1</label>
        <referenceTo>ssot__Promotion__dlm</referenceTo>
        <relationshipLabel>Offer_PromotionId_map_Promotion_Id_N_1</relationshipLabel>
        <relationshipName>Offer_PromotionId_map_Promotion_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__PriorityNumber__c</fullName>
        <label>Priority Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionId__c</fullName>
        <label>Promotion</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordType__c</fullName>
        <label>Record Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>